--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -93,51 +93,8 @@
                     <button class="btn-1"><a href="nosotros.html">Ver más</a></button>
                 </div>
             </section>
-            <section class="inicio__clases">
-                <div class="inicio__clases-list container">
-                    <div class="inicio__clases-item">
-                        <img src="img/image.png" alt="" class="inicio__clases-img">
-                        <a href="programas.html"><h3>Clases de Actuación</h3></a>
-                        <button class="inicio__clases-btn">
-                            <a href="programas.html">ME INTERESA<img src="img/icon/arrow-next.svg" alt="" class="inicio__clases-icon"></a>
-                        </button>
-                    </div>
-                    <div class="inicio__clases-item">
-                        <img src="img/ChatGPT Image 22 jul 2025, 10_28_38 p.m..png" alt="" class="inicio__clases-img">
-                        <a href="programas.html"><h3>Clases de Danza</h3></a>
-                        <button class="inicio__clases-btn">
-                            <a href="programas.html">ME INTERESA<img src="img/icon/arrow-next.svg" alt="" class="inicio__clases-icon"></a>
-                        </button>
-                    </div>
-                    <div class="inicio__clases-item">
-                        <img src="img/27eb242d086793eb602e44319679ecf6.jpg" alt="" class="inicio__clases-img">
-                        <a href="programas.html"><h3>Clases de Teatro</h3></a>
-                        <button class="inicio__clases-btn">
-                            <a href="programas.html">ME INTERESA<img src="img/icon/arrow-next.svg" alt="" class="inicio__clases-icon"></a>
-                        </button>
-                    </div>
-                </div>
-            </section>
-            <section class="inicio__actividades">
-                <h2>Actividades</h2>
-                <div class="inicio__actividades-list container">
-                    <div class="inicio__actividades-item">
-                        <img src="img/image1.jpg" class="inicio__actividades-item-img" alt="">
-                    </div>
-                    <div class="inicio__actividades-item">
-                        <img src="img/image2.png" class="inicio__actividades-item-img" alt="">
-                    </div>
-                    <div class="inicio__actividades-item">
-                        <img src="img/image3.jpg" class="inicio__actividades-item-img" alt="">
-                    </div>
-                    <div class="inicio__actividades-item">
-                        <img src="img/image4.jpg" class="inicio__actividades-item-img" alt="">
-                    </div>
-                </div>
-                <button class="btn-3"><a href="">Ver Más</a></button>
-            </section>
             <section class="inicio__programas">
-                <h2>Conoce Nuestros Programas</h2>
+                <h2 class="inicio__programas-title">Conoce Nuestros Programas</h2>
                 <p>Conoce Nuestros Programas Conoce Nuestros Programas 
                     Conoce Nuestros Programas Conoce Nuestros Programas</p>
                 <div class="inicio__programas-list container">
@@ -160,6 +117,24 @@
                         </button>
                     </div>
                 </div>
+            </section>
+            <section class="inicio__actividades">
+                <h2>Presentaciones Artísticas</h2>
+                <div class="inicio__actividades-list container">
+                    <div class="inicio__actividades-item">
+                        <img src="img/image1.jpg" class="inicio__actividades-item-img" alt="">
+                    </div>
+                    <div class="inicio__actividades-item">
+                        <img src="img/image2.png" class="inicio__actividades-item-img" alt="">
+                    </div>
+                    <div class="inicio__actividades-item">
+                        <img src="img/image3.jpg" class="inicio__actividades-item-img" alt="">
+                    </div>
+                    <div class="inicio__actividades-item">
+                        <img src="img/image4.jpg" class="inicio__actividades-item-img" alt="">
+                    </div>
+                </div>
+                <button class="btn-3"><a href="">Ver Más</a></button>
             </section>
             <div class="n">
                 <img src="img/Asientos-teatro.jpg" alt="">
@@ -368,14 +343,54 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1079.1901803703067!2d-69.62499629023532!3d9.933268218672843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1754768823126!5m2!1ses-419!2sve" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </li>
-                    <li class="footer__div4">
+                    <li class="footer__list-4">
                         <h3>Desarrolladores</h3>
-                        <a href="">Jhonny D. Dávila R.</a>
-                        <a href="">Jesús D.Pérez B.</a>
-                        <a href="">Jasneli Rodríguez</a>
-                        <a href="">Jhosber Gil</a>
-                        <a href="">Beritzon R. Colmenarez</a>
-                        <p>Proporcionado por la UPTAEB</p>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jhonny D. Dávila R.</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jesús D. Pérez B.</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jasneli Rodríguez</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Beritzon R. Colmenarez</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jhosber Gil</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <p class="uptaeb">Proporcionado por la UPTAEB</p>
                         <img src="img/Logos/uptaeb.jpg" alt="logo_uptaeb" class="footer__logo-uptaeb">
                     </li>
                 </ul>
