--- a/Pagina Web/programas.html
+++ b/Pagina Web/programas.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="programas__clases-item">
                     <div class="programas__clases-item-info">
-                        <h2>hola</h2>
+                        <h2>Gimnasia</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisi
                             cing elit. Aliquid, obcaecati mollitia? Ea asp
                             eriores in quaerat! Dignissimos aperi sjsjsjsjs
@@ -107,6 +107,11 @@
             </div>
         </seccion>
         <section class="programas">
+            <h2 class="programas-title">Programas de Formación</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing 
+            elit. Veritatis hic quidem sint et deleniti in, officia <br>
+            reiciendis nostrum voluptatum sunt tenetur esse eligendi 
+            fugit quis adipisci.</p>
             <div class="programas-list container">
                 <article class="programas-item">
                     <img src="img/fondo textura cortina rojo.avif" alt="" class="programas-item-img">
