--- a/Pagina Web/blog.html
+++ b/Pagina Web/blog.html
@@ -378,14 +378,54 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1079.1901803703067!2d-69.62499629023532!3d9.933268218672843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1754768823126!5m2!1ses-419!2sve" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </li>
-                    <li class="footer__div4">
+                    <li class="footer__list-4">
                         <h3>Desarrolladores</h3>
-                        <a href="">Jhonny D. Dávila R.</a>
-                        <a href="">Jesús D.Pérez B.</a>
-                        <a href="">Jasneli Rodríguez</a>
-                        <a href="">Jhosber Gil</a>
-                        <a href="">Beritzon R. Colmenarez</a>
-                        <p>Proporcionado por la UPTAEB</p>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jhonny D. Dávila R.</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jesús D. Pérez B.</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jasneli Rodríguez</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Beritzon R. Colmenarez</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jhosber Gil</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <p class="uptaeb">Proporcionado por la UPTAEB</p>
                         <img src="img/Logos/uptaeb.jpg" alt="logo_uptaeb" class="footer__logo-uptaeb">
                     </li>
                 </ul>
