--- a/Pagina Web/nosotros.html
+++ b/Pagina Web/nosotros.html
@@ -41,22 +41,25 @@
             <section class="nosotros__historia container">
                     <img src="img/image2.png" class="nosotros__historia-img" alt="">
                     <div class="nosotros__historia-info">
-                        <h3>Conoce un poco de</h3>
                         <h2 class="nosotros__historia-info-title">Nuestra Historia</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Libero enim minus impedit recusandae maiores. 
-                            Id rerum ea laudantium repellendus, sunt quas 
-                            provident. Consectetur explicabo voluptas architecto 
-                            voluptate numquam ipsa blanditiis.</p>
+                            Libero enim minus impedit recusandae maiores. Id rerum 
+                            ea laudantium repellendus, sunt quas provident. Consect
+                            etur explicabo voluptas architectoLibero enim minus imp
+                            edit recusandae maiores. Id rerum ea laudantium repelle
+                            ndus, sunt quas provident. Consectetur explicabo volupt
+                            as architecto voluptate numquam ipsskkssksa blanditiis.</p>
                     </div>
             </section>
             <section class="mvv">
                 <div class="mv container">
                     <div class="mvv-cre">
-                        <h2>Nuestra Historia</h2>
+                        <h3>Nuestra Fundadora</h3>
+                        <h2 class="mvv-title">Ganesis Niño</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisi
                         cing elit. Libero enim minus impedit recusandae.
-                        maiores voluptate numquam ipsa blanditiis.</p>
+                        maiores voluptate numquam ipsa blanditiis impedit 
+                        recusandae. maiores voluptate numquam ipsditiis.</p>
                     </div>
                     <div class="mvv1">
                         <ul class="mvv-info">
@@ -88,35 +91,8 @@
                     </div>
                 </div>
             </section>
-            <section class="nosotros__enfoque container">
-                <div  class="nosotros__enfoque-list">
-                <article class="nosotros__enfoque-item">
-                    <div class="nosotros__enfoque-item-info">
-                        <img src="img/icon/whatsapp.svg" class="nosotros__enfoque-item-icon" alt="">
-                        <h4>orem ipsum</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                        elit. Voluptates, dolorem saepe cumque consequatur</p>
-                    </div>
-                </article>
-                <article class="nosotros__enfoque-item">
-                    <div class="nosotros__enfoque-item-info">
-                        <img src="img/icon/whatsapp.svg" class="nosotros__enfoque-item-icon" alt="">
-                        <h4>orem ipsum</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                        elit. Voluptates, dolorem saepe cumque consequatur</p>
-                    </div>
-                </article>
-                <article class="nosotros__enfoque-item">
-                    <div class="nosotros__enfoque-item-info">
-                        <img src="img/icon/whatsapp.svg" class="nosotros__enfoque-item-icon" alt="">
-                        <h4>orem ipsum</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                        elit. Voluptates, dolorem saepe cumque consequatur</p>
-                    </div>
-                </article>
-                </div>
-            </section>
             <section class="nosotros__docentes">
+                <h2 class="nosotros__docentes-title">Nuestro Equipo</h2>
                 <div class="nosotros__docentes-list">
                     <div class="nosotros__docentes-item">
                         <div class="nosotros__docentes-item-info">
@@ -164,163 +140,6 @@
                     </div>
                 </div>
             </section>
-            <section class="comentario">
-                <div class="comentario__container container">
-                    <ul class="comentario__list">
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario1.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>20 enero 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario2.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>28 marzo 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario3.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>18 diciembre 2022</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario2.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>28 marzo 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque cosjjsjsjsj
-                                snsjsjs sjs js sjsjs js sjjs s js js sjsjnsequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario1.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>20 enero 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario2.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>28 marzo 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario3.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>18 diciembre 2022</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque consequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                        <li class="comentario__item">
-                            <div class="comentario__item-info">
-                                <img src="img/comentario2.jpg" alt="" class="comentario__img">
-                                <div>
-                                <h4>Pedro Lopez</h4>
-                                <span>28 marzo 2024</span>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-                                elit. Voluptates, dolorem saepe cumque cosjjsjsjsj
-                                snsjsjs sjs js sjsjs js sjjs s js js sjsjnsequatur
-                                ut facilis. Tempore illum totam distinctio? Vitaeto</p>
-                            <img src="img/icon/5Estrellas.jpg" alt="" class="comentario__icon">
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <section class="faq container">
-                <h2 class="faq__title">Preguntas Frecuentes</h2>
-                <ul class="faq__list">
-                    <li class="faq__item">
-                        <input type="checkbox" id="p1">
-                        <label for="p1" class="faq__item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p2">
-                        <label for="p2" class="faq__item-title"><h3>¿Puedo adquirir una beca?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p3">
-                        <label for="p3" class="faq__item-title"><h3>¿Qué requisitos necesito para inscribirme?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p4">
-                        <label for="p4" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p5">
-                        <label for="p5" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="faq__item">
-                        <input type="checkbox" id="p6">
-                        <label for="p6" class="faq__item-title"><h3>¿Solo actuación, danzas y teatro?</h3></label>
-                        <article class="faq__item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                </ul>
-            </section>
         </main>
         <footer>
             <div class="footer">
@@ -360,14 +179,54 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1079.1901803703067!2d-69.62499629023532!3d9.933268218672843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1754768823126!5m2!1ses-419!2sve" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </li>
-                    <li class="footer__div4">
+                    <li class="footer__list-4">
                         <h3>Desarrolladores</h3>
-                        <a href="">Jhonny D. Dávila R.</a>
-                        <a href="">Jesús D.Pérez B.</a>
-                        <a href="">Jasneli Rodríguez</a>
-                        <a href="">Jhosber Gil</a>
-                        <a href="">Beritzon R. Colmenarez</a>
-                        <p>Proporcionado por la UPTAEB</p>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jhonny D. Dávila R.</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jesús D. Pérez B.</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jasneli Rodríguez</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Beritzon R. Colmenarez</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="footer__list-4-item">
+                            <p class="footer__list-4-item-dev">Jhosber Gil</p>
+                            <div class="footer__list-4-item-dev-redes">
+                                <a href=""><img src="img/icon/facebook-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/instagram-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/whatsapp-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                                <a href=""><img src="img/icon/linkedin-dev.svg" class="footer__list-4-item-dev-redes-icon" alt=""></a>
+                            </div>
+                        </div>
+                        <p class="uptaeb">Proporcionado por la UPTAEB</p>
                         <img src="img/Logos/uptaeb.jpg" alt="logo_uptaeb" class="footer__logo-uptaeb">
                     </li>
                 </ul>
